--- a/corpvideohost/frontend/package.json
+++ b/corpvideohost/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
+    "eslint-plugin-prettier": "^5.1.3",
     "module-name": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.1.0"
   }
 }
