--- a/corpvideohost/frontend/package.json
+++ b/corpvideohost/frontend/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^18.2.22",
         "axios": "^1.6.8",
         "eslint-plugin-prettier": "^5.1.3",
+        "fluent-ffmpeg": "^2.1.2",
         "hls.js": "^1.5.8",
         "module-name": "^0.0.1-security",
         "plyr": "^3.7.8",
@@ -63,6 +64,7 @@
         ]
     },
     "devDependencies": {
+        "@types/fluent-ffmpeg": "^2.1.24",
         "@types/react-lazy-load-image-component": "^1.6.3",
         "@types/styled-components": "^5.1.34",
         "@types/video-react": "^0.15.6",
