--- a/corpvideohost/frontend/package.json
+++ b/corpvideohost/frontend/package.json
@@ -27,6 +27,7 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "react-transition-group": "^4.4.5",
         "react-video-js-player": "^1.1.1",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
@@ -66,6 +67,7 @@
     "devDependencies": {
         "@types/fluent-ffmpeg": "^2.1.24",
         "@types/react-lazy-load-image-component": "^1.6.3",
+        "@types/react-transition-group": "^4.4.10",
         "@types/styled-components": "^5.1.34",
         "@types/video-react": "^0.15.6",
         "@types/video.js": "^7.3.58",
