--- a/corpvideohost/frontend/package.json
+++ b/corpvideohost/frontend/package.json
@@ -23,6 +23,7 @@
         "react-hook-form": "^7.51.1",
         "react-icons": "^5.1.0",
         "react-lazy-load-image-component": "^1.6.0",
+        "react-multi-carousel": "^2.8.5",
         "react-player": "^2.16.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
