--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,6 +40,7 @@ jobs:
           DATABASE_URL: postgres://postgres:123@localhost:5432/videohost
         run: |
           source venv/bin/activate
+          cd corpvideohost 
           python manage.py migrate
 
       - name: Run tests
@@ -47,4 +48,5 @@ jobs:
           DATABASE_URL: postgres://postgres:123@localhost:5432/test_videohost
         run: |
           source venv/bin/activate
+          cd corpvideohost 
           python manage.py test
